each Pair's nestedIn is set at bith